--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ members = ["macros"]
 
 [dependencies]
 bevy_ecs_ldtk_macros = { version = "0.8.0", optional = true, path = "macros" }
-bevy_ecs_tilemap = { version = "0.12", default-features = false }
+bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", rev = "b08a5d997867d5e5a760e296dc38e435c6b268cc", default-features = false }
 bevy = { version = "0.12", default-features = false, features = ["bevy_sprite"] }
 derive-getters = "0.3.0"
 serde = { version = "1.0", features = ["derive"] }
@@ -52,6 +52,3 @@ path = "examples/platformer/main.rs"
 [[example]]
 name = "field_instances"
 path = "examples/field_instances/main.rs"
-
-[patch.crates-io]
-bevy_ecs_tilemap = { git = "https://github.com/divark/bevy_ecs_tilemap", branch = "0.12-fixes" }
