--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bevy_ecs_ldtk"
 description = "An ECS-friendly ldtk plugin for bevy."
-version = "0.9.0"
+version = "0.9.1"
 edition = "2021"
 authors = ["Trevor Lovell <trevorlovelldesign@gmail.com>"]
 repository = "https://github.com/Trouv/bevy_ecs_ldtk"
@@ -15,7 +15,7 @@ members = ["macros"]
 
 [dependencies]
 bevy_ecs_ldtk_macros = { version = "0.9.0", optional = true, path = "macros" }
-bevy = { version = "0.13", default-features = false, features = ["bevy_sprite"] }
+bevy = { version = "0.14.0-rc.4", default-features = false, features = ["bevy_sprite"] }
 derive-getters = "0.3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -26,23 +26,20 @@ paste = "1.0"
 derive_more = "0.99.17"
 path-clean = "1.0.1"
 
-[dependencies.bevy_ecs_tilemap]
-# version = "0.13"
-git = "https://github.com/StarArawn/bevy_ecs_tilemap"
-rev = "25def41e029626bb5e84fe7aca1f16a1d6beccdc"
+[dependencies.seek_ecs_tilemap]
+ version = "0.1.1"
+git = "https://github.com/TheSeekerGame/seek_ecs_tilemap"
 
 [dev-dependencies]
-bevy = "0.13"
+bevy = { version = "0.14.0-rc.4"}
 bevy_rapier2d = "0.25.0"
 fake = { version = "2.8.0", features = ["uuid"] }
 rand = "0.8"
 bevy-inspector-egui = "0.23.0"
 
 [features]
-default = ["derive", "render", "internal_levels"]
+default = ["derive", "internal_levels"]
 derive = ["bevy_ecs_ldtk_macros"]
-atlas = ["bevy_ecs_tilemap/atlas"]
-render = ["bevy_ecs_tilemap/render"]
 internal_levels = []
 external_levels = []
 
