--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bevy_ecs_ldtk"
 description = "An ECS-friendly ldtk plugin for bevy."
-version = "0.9.0"
+version = "0.9.2"
 edition = "2021"
 authors = ["Trevor Lovell <trevorlovelldesign@gmail.com>"]
 repository = "https://github.com/Trouv/bevy_ecs_ldtk"
@@ -26,10 +26,9 @@ paste = "1.0"
 derive_more = "0.99.17"
 path-clean = "1.0.1"
 
-[dependencies.bevy_ecs_tilemap]
-# version = "0.13"
-git = "https://github.com/StarArawn/bevy_ecs_tilemap"
-rev = "25def41e029626bb5e84fe7aca1f16a1d6beccdc"
+[dependencies.seek_ecs_tilemap]
+version = "0.1.2"
+git = "https://github.com/TheSeekerGame/seek_ecs_tilemap"
 
 [dev-dependencies]
 bevy = "0.13"
@@ -39,10 +38,8 @@ rand = "0.8"
 bevy-inspector-egui = "0.23.0"
 
 [features]
-default = ["derive", "render", "internal_levels"]
+default = ["derive", "internal_levels"]
 derive = ["bevy_ecs_ldtk_macros"]
-atlas = ["bevy_ecs_tilemap/atlas"]
-render = ["bevy_ecs_tilemap/render"]
 internal_levels = []
 external_levels = []
 
